sfdx-source/SmartVisca/main/default/objects/Account/fields/NameCard__c.field-meta.xml
<CustomField>
    <fullName>NameCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>名刺</label>
    <referenceTo>NameCard__c</referenceTo>
    <relationshipLabel>取引先</relationshipLabel>
    <relationshipName>AccountNameCards</relationshipName>
    <type>Lookup</type>
</CustomField>