sfdx-source/SmartVisca/main/default/objects/Account/fields/NameCardFreehandmemo__c.field-meta.xml
<CustomField>
    <fullName>NameCardFreehandmemo__c</fullName>
    <label>名刺手書きメモ</label>
    <type>TextArea</type>
</CustomField>