sfdx-source/SmartVisca/main/default/objects/Account/fields/NameCardMemo__c.field-meta.xml
<CustomField>
    <fullName>NameCardMemo__c</fullName>
    <label>名刺メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>